# domainModel-Metrics-Comparison

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  codemeta.json  compare_metrics.py  pyproject.toml
.github/workflows/: ci.yml
Metric-Implementation/: README.md
Metric-Implementation/Metrik-1/: README.md
Metric-Implementation/Metrik-1/Implementation-1/: checkClasses.py  checkMissing.py  checkRelations.py  mapClasses.py  mapRelationships.py  metric.py
Metric-Implementation/Metrik-1/Implementation-2/: checkClasses.py  checkMissing.py  checkRelations.py  mapClasses.py  mapRelationships.py  metric.py
Metric-Implementation/Metrik-1/Implementation-3/: checkClasses.py  checkMissing.py  checkRelations.py  mapClasses.py  mapRelationships.py  metric.py  normalize.py
Metric-Implementation/Metrik-1/Parser/: README.md  __init__.py  parser.py  qualitative_test.py  test_runner.py
Metric-Implementation/Metrik-1/Specification/: checkClasses.py  checkMissing.py  checkRelations.py  example.py  mapClasses.py  mapRelationships.py  metric.py  normalize.py  s1.md  s2.md
Metric-Implementation/Metrik-1/Testset/: halbordnungen.md  isValidMapping.py  isValidMistakes.py  isValidModel.py  isValidNormalize.py  tS-2.py  tS-3.py
Metric-Implementation/Metrik-2/: README.md
Metric-Implementation/Metrik-2/Implementation-1/: aggregateEditInformations.py  computeElementMapping.py  computeOptimalMapping.py  computeRelationMapping.py  createGraph.py  metric.py  (+3 more)
Metric-Implementation/Metrik-3/: README.md
Metric-Implementation/Metrik-4/: README.md
Metric-Implementation/Metrik-5/: README.md  diss_metric_worker.py
Notebooks/: README.md  _build_walkthrough.py  quantitative_results_walkthrough.ipynb
Quantitative-Analysis/: README.md
Quantitative-Analysis/Notebooks/: README.md  _build_walkthrough.py  comparisons_walkthrough.ipynb
Quantitative-Analysis/Results/: README.md  metrics_comparison.json  results_metrik1.json  results_metrik2.json  results_metrik3.json  results_metrik4.json  results_metrik5.json
Quantitative-Analysis/RunMetrics/: README.md  common.py  run_all.py  run_metrik1.py  run_metrik2.py  run_metrik3.py  run_metrik4.py  run_metrik5.py
Quantitative-Analysis/Workflow/: README.md  __init__.py  data_loader.py  delta_calculator.py  results_writer.py  workflow.py
data/: combined-data.json
src/domain_model_metrics/: __init__.py  compare.py
tests/: _fixtures.py  conftest.py  test_api_imports.py  test_metrics_protocol.py  test_workflow_smoke.py
(+136 files in other folders)
